applications/otel-demo-local/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: otel-demo
  namespace: opentelemetry-demo

spec:
  gatewayClassName: nginx

  listeners:
    - name: http
      hostname: "*.localhost"
      port: 80
      protocol: HTTP

      allowedRoutes:
        namespaces:
          from: Same
