applications/otel-demo-local/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: otel-demo
  namespace: opentelemetry-demo

spec:
  parentRefs:
    - name: otel-demo
      sectionName: http

  hostnames:
    - otel-demo.localhost

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: frontend-proxy
          port: 8080
